Fixed emojis' align

--- a/_sass/layout/_list.scss
+++ b/_sass/layout/_list.scss
@@ -15,7 +15,7 @@
     .emoji {
       width: rem(65);
       height: rem(65);
-      margin: rem(15) auto;
+      margin: rem(20) auto rem(15);
     }
     h4 {
       display: flex;
